--- a/index.html
+++ b/index.html
@@ -8,8 +8,89 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/lib/all.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Bolt - Free Bootstrap 3 Theme</title>
+    <meta name="description" content="This is my portfolio site."/>
+    <meta name="keywords" content="bolt, bootstrap, portfolio">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
-  <body>
-
+  <body class="body">
+    <header class="header">
+      <div class="inne">
+        <i class="fas fa-bolt"></i>
+        <a class="botton">Contact</a>
+      </div>
+    </header>
+    <main class="main">
+      <div class="heading">
+        <div class="inne headingbox">
+          <div class="caption">Bolt Theme</div>
+          <p class="caption_sub">FREE BOOTSTRAP THEMES</p>
+        </div>
+      </div>
+      <section class="section-fast">
+        <div class="inne">
+          <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/iphone.png" class="iphone">
+          <div class="box">
+            <P class="index">WHAT WE CAN DO?</P>
+            <P class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </P>
+          </div>
+        </div>
+      </section>
+      <article class="article">
+        <div class="inne">
+          <div class="article_text">OUR LATEST WORK</div>
+            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/01.jpg" class="img">
+            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/02.jpg" class="img">
+            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/03.jpg" class="img">
+            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/04.jpg" class="img">
+            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/05.jpg" class="img">
+            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/06.jpg" class="img">
+          </div>
+        </div>
+        <div class="subbox">
+          <div class="inne">
+            <p class="subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <a class="article_button">Email Me!</a>
+          </div>
+        </div>
+      </article>
+      <section class="section_second">
+        <div class="inne">
+          <div class="section_second_text">OUR SKILLS</div>
+          <div class="section_second_box">
+            <figure class="figure">
+              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_01.png">
+              <figcaption class="figcaption">JacaScript</figcaption>
+            </figure>
+            <figure class="figure">
+              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_02.png">
+              <figcaption class="figcaption">Bootsyrap</figcaption>
+            </figure>
+            <figure class="figure">
+              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_03.png">
+              <figcaption class="figcaption">WordPress</figcaption>
+            </figure>
+            <figure class="figure">
+              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_04.png">
+              <figcaption class="figcaption">photoshop</figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+      <nav class="nav">
+        <div class="nav_botton inne">
+          <a class="sns"><i class="fab fa-facebook-f"></i></a>
+          <a class="sns"><i class="fab fa-dribbble"></i></a>
+          <a class="sns"><i class="fab fa-twitter"></i></a>
+          <a class="sns"><i class="fas fa-envelope"></i></a>
+        </div>
+      </nav>
+    </main>
+    <footer class="footer">
+      <div class="inne">
+        <div class="footer_text">Crafted with<i class="fas fa-heart"></i>by BlackTle.co.</div>
+      </div>
+    </footer>
   </body>
 </html>
