--- a/index.html
+++ b/index.html
@@ -17,68 +17,68 @@
     <header class="header">
       <div class="inne">
         <i class="fas fa-bolt"></i>
-        <a class="botton">Contact</a>
+        <a class="botton inline">Contact</a>
       </div>
     </header>
     <main class="main">
       <div class="heading">
         <div class="inne headingbox">
-          <div class="caption">Bolt Theme</div>
-          <p class="caption_sub">FREE BOOTSTRAP THEMES</p>
+          <div class="caption center raleway">Bolt Theme</div>
+          <p class="caption_sub center raleway">FREE BOOTSTRAP THEMES</p>
         </div>
       </div>
-      <section class="section-fast">
+      <section class="section-fast center">
         <div class="inne">
-          <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/iphone.png" class="iphone">
-          <div class="box">
-            <P class="index">WHAT WE CAN DO?</P>
-            <P class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          <img src="./img/iphone.png" class="iphone inline">
+          <div class="box inline">
+            <P class="index raleway">WHAT WE CAN DO?</P>
+            <P class="text subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </P>
           </div>
         </div>
       </section>
-      <article class="article">
+      <article class="article center">
         <div class="inne">
-          <div class="article_text">OUR LATEST WORK</div>
-            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/01.jpg" class="img">
-            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/02.jpg" class="img">
-            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/03.jpg" class="img">
-            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/04.jpg" class="img">
-            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/05.jpg" class="img">
-            <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/06.jpg" class="img">
+          <div class="article_text center raleway">OUR LATEST WORK</div>
+            <img src="./img/01.jpg" class="img">
+            <img src="./img/02.jpg" class="img">
+            <img src="./img/03.jpg" class="img">
+            <img src="./img/04.jpg" class="img">
+            <img src="./img/05.jpg" class="img">
+            <img src="./img/06.jpg" class="img">
           </div>
         </div>
-        <div class="subbox">
+        <div class="subbox center">
           <div class="inne">
-            <p class="subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <a class="article_button">Email Me!</a>
+            <p class="subtext inline subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <a class="article_button inline">Email Me!</a>
           </div>
         </div>
       </article>
-      <section class="section_second">
+      <section class="section_second center">
         <div class="inne">
-          <div class="section_second_text">OUR SKILLS</div>
+          <div class="section_second_text raleway">OUR SKILLS</div>
           <div class="section_second_box">
-            <figure class="figure">
-              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_01.png">
+            <figure class="figure inline">
+              <img src="./img/circle_01.png">
               <figcaption class="figcaption">JacaScript</figcaption>
             </figure>
-            <figure class="figure">
-              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_02.png">
+            <figure class="figure inline">
+              <img src="./img/circle_02.png">
               <figcaption class="figcaption">Bootsyrap</figcaption>
             </figure>
-            <figure class="figure">
-              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_03.png">
+            <figure class="figure inline">
+              <img src="./img/circle_03.png">
               <figcaption class="figcaption">WordPress</figcaption>
             </figure>
-            <figure class="figure">
-              <img src="file:///Users/masujimamoeka/Desktop/gizumo/bolt/img/circle_04.png">
+            <figure class="figure inline">
+              <img src="./img/circle_04.png">
               <figcaption class="figcaption">photoshop</figcaption>
             </figure>
           </div>
         </div>
       </section>
-      <nav class="nav">
+      <nav class="nav center">
         <div class="nav_botton inne">
           <a class="sns"><i class="fab fa-facebook-f"></i></a>
           <a class="sns"><i class="fab fa-dribbble"></i></a>
@@ -89,7 +89,7 @@
     </main>
     <footer class="footer">
       <div class="inne">
-        <div class="footer_text">Crafted with<i class="fas fa-heart"></i>by BlackTle.co.</div>
+        <div class="footer_text">Crafted with <i class="fas fa-heart"></i> by BlackTle.co.</div>
       </div>
     </footer>
   </body>
