--- a/index.html
+++ b/index.html
@@ -15,48 +15,50 @@
   </head>
   <body class="body">
     <header class="header">
-      <div class="inne">
+      <div class="inner">
         <i class="fas fa-bolt"></i>
         <a class="botton inline">Contact</a>
       </div>
     </header>
     <main class="main">
       <div class="heading">
-        <div class="inne headingbox">
-          <div class="caption center raleway">Bolt Theme</div>
+        <div class="inner">
+          <h1 class="caption center raleway">Bolt Theme</h1>
           <p class="caption_sub center raleway">FREE BOOTSTRAP THEMES</p>
         </div>
       </div>
       <section class="section-fast center">
-        <div class="inne">
+        <div class="inner">
           <img src="./img/iphone.png" class="iphone inline">
           <div class="box inline">
-            <P class="index raleway">WHAT WE CAN DO?</P>
-            <P class="text subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            </P>
+            <h2 class="index raleway">WHAT WE CAN DO?</h1>
+            <P class="text subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</P>
           </div>
         </div>
       </section>
       <article class="article center">
-        <div class="inne">
-          <div class="article_text center raleway">OUR LATEST WORK</div>
-            <img src="./img/01.jpg" class="img">
-            <img src="./img/02.jpg" class="img">
-            <img src="./img/03.jpg" class="img">
-            <img src="./img/04.jpg" class="img">
-            <img src="./img/05.jpg" class="img">
-            <img src="./img/06.jpg" class="img">
+        <div class="inner">
+          <div class="article_text raleway">OUR LATEST WORK</div>
+          <div class="imgbox center">
+            <img src="./img/01.jpg" class="image">
+            <img src="./img/02.jpg" class="image">
+            <img src="./img/03.jpg" class="image">
+            <img src="./img/04.jpg" class="image">
+            <img src="./img/05.jpg" class="image">
+            <img src="./img/06.jpg" class="image">
           </div>
-        </div>
-        <div class="subbox center">
-          <div class="inne">
-            <p class="subtext inline subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <a class="article_button inline">Email Me!</a>
+          <div class="subbox center">
+            <div class="inline">
+              <p class="subtext inline subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            </div>
+            <div class="buttonbox inline">
+              <a class="article_button inline">Email Me!</a>
+            </div>
           </div>
         </div>
       </article>
       <section class="section_second center">
-        <div class="inne">
+        <div class="inner">
           <div class="section_second_text raleway">OUR SKILLS</div>
           <div class="section_second_box">
             <figure class="figure inline">
@@ -88,8 +90,8 @@
       </nav>
     </main>
     <footer class="footer">
-      <div class="inne">
-        <div class="footer_text">Crafted with <i class="fas fa-heart"></i> by BlackTle.co.</div>
+      <div class="inner">
+        <p class="footer_text">Crafted with <i class="fas fa-heart"></i> by BlackTle.co.</p>
       </div>
     </footer>
   </body>
