--- a/index.html
+++ b/index.html
@@ -38,15 +38,27 @@
       </section>
       <article class="article center">
         <div class="inner">
-          <div class="article_text raleway">OUR LATEST WORK</div>
-          <div class="imgbox center">
-            <img src="./img/01.jpg" class="image">
-            <img src="./img/02.jpg" class="image">
-            <img src="./img/03.jpg" class="image">
-            <img src="./img/04.jpg" class="image">
-            <img src="./img/05.jpg" class="image">
-            <img src="./img/06.jpg" class="image">
-          </div>
+          <h3 class="article_text raleway">OUR LATEST WORK</h3>
+          <ul class="imgbox center">
+            <li class="image inline">
+              <a><img src="./img/01.jpg"></a>
+            </li>
+            <li class="image inline">
+              <a><img src="./img/02.jpg"></a>
+            </li>
+            <li class="image inline">
+              <a><img src="./img/03.jpg"></a>
+            </li>
+            <li class="image inline">
+              <a><img src="./img/04.jpg"></a>
+            </li>
+            <li class="image inline">
+              <a><img src="./img/05.jpg"></a>
+            </li>
+            <li class="image inline">
+              <a><img src="./img/06.jpg"></a>
+            </li>
+          </ul>
           <div class="subbox center">
             <div class="inline">
               <p class="subtext inline subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
@@ -59,34 +71,50 @@
       </article>
       <section class="section_second center">
         <div class="inner">
-          <div class="section_second_text raleway">OUR SKILLS</div>
-          <div class="section_second_box">
-            <figure class="figure inline">
-              <img src="./img/circle_01.png">
-              <figcaption class="figcaption">JacaScript</figcaption>
-            </figure>
-            <figure class="figure inline">
-              <img src="./img/circle_02.png">
-              <figcaption class="figcaption">Bootsyrap</figcaption>
-            </figure>
-            <figure class="figure inline">
-              <img src="./img/circle_03.png">
-              <figcaption class="figcaption">WordPress</figcaption>
-            </figure>
-            <figure class="figure inline">
-              <img src="./img/circle_04.png">
-              <figcaption class="figcaption">photoshop</figcaption>
-            </figure>
-          </div>
+          <h4 class="section_second_text raleway">OUR SKILLS</h4>
+          <ul class="section_second_box">
+            <li class="inline figure">
+              <figure>
+                <img src="./img/circle_01.png">
+                <figcaption class="figcaption">JacaScript</figcaption>
+              </figure>
+            </li>
+            <li class="inline figure">
+              <figure>
+                <img src="./img/circle_02.png">
+                <figcaption class="figcaption">Bootsyrap</figcaption>
+              </figure>
+            </li>
+            <li class="inline figure">
+              <figure>
+                <img src="./img/circle_03.png">
+                <figcaption class="figcaption">WordPress</figcaption>
+              </figure>
+            </li>
+            <li class="inline figure">
+              <figure>
+                <img src="./img/circle_04.png">
+                <figcaption class="figcaption">photoshop</figcaption>
+              </figure>
+            </li>
+          </ul>
         </div>
       </section>
       <nav class="nav center">
-        <div class="nav_botton inne">
-          <a class="sns"><i class="fab fa-facebook-f"></i></a>
-          <a class="sns"><i class="fab fa-dribbble"></i></a>
-          <a class="sns"><i class="fab fa-twitter"></i></a>
-          <a class="sns"><i class="fas fa-envelope"></i></a>
-        </div>
+        <ul class="nav_botton inne">
+          <li class="sns inline"> 
+            <a><i class="fab fa-facebook-f"></i></a>
+          </li>
+          <li class="sns inline">
+            <a><i class="fab fa-dribbble"></i></a>
+          </li>
+          <li class="sns inline">
+            <a><i class="fab fa-twitter"></i></a>
+          </li>
+          <li class="sns inline">
+            <a><i class="fas fa-envelope"></i></a>
+          </li>
+        </ul>
       </nav>
     </main>
     <footer class="footer">
