--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           </div>
         </div>
       </section>
-      <article class="article center">
-        <div class="inner">
-          <h3 class="article_text raleway">OUR LATEST WORK</h3>
-          <ul class="imgbox center">
+      <article class="article">
+        <div class="inner center">
+          <h2 class="article_text raleway">OUR LATEST WORK</h2>
+          <ul class="imgbox">
             <li class="image inline">
               <a><img src="./img/01.jpg"></a>
             </li>
@@ -71,7 +71,7 @@
       </article>
       <section class="section_second center">
         <div class="inner">
-          <h4 class="section_second_text raleway">OUR SKILLS</h4>
+          <h2 class="section_second_text raleway">OUR SKILLS</h2>
           <ul class="section_second_box">
             <li class="inline figure">
               <figure>
@@ -103,16 +103,16 @@
       <nav class="nav center">
         <ul class="nav_botton inne">
           <li class="sns inline"> 
-            <a><i class="fab fa-facebook-f"></i></a>
+            <a class="icon"><i class="fab fa-facebook-f"></i></a>
           </li>
           <li class="sns inline">
-            <a><i class="fab fa-dribbble"></i></a>
+            <a class="icon"><i class="fab fa-dribbble"></i></a>
           </li>
           <li class="sns inline">
-            <a><i class="fab fa-twitter"></i></a>
+            <a class="icon"><i class="fab fa-twitter"></i></a>
           </li>
           <li class="sns inline">
-            <a><i class="fas fa-envelope"></i></a>
+            <a class="icon"><i class="fas fa-envelope"></i></a>
           </li>
         </ul>
       </nav>
