--- a/index.html
+++ b/index.html
@@ -41,22 +41,34 @@
           <h2 class="article_text raleway">OUR LATEST WORK</h2>
           <ul class="imgbox">
             <li class="image inline">
-              <a><img src="./img/01.jpg"></a>
+              <a class="inline">
+                <img src="./img/01.jpg">
+              </a>
             </li>
             <li class="image inline">
-              <a><img src="./img/02.jpg"></a>
+              <a class="inline">
+                <img src="./img/02.jpg">
+              </a>
             </li>
             <li class="image inline">
-              <a><img src="./img/03.jpg"></a>
+              <a class="inline">
+                <img src="./img/03.jpg">
+              </a>
             </li>
             <li class="image inline">
-              <a><img src="./img/04.jpg"></a>
+              <a class="inline">
+                <img src="./img/04.jpg">
+              </a>
             </li>
             <li class="image inline">
-              <a><img src="./img/05.jpg"></a>
+              <a class="inline">
+                <img src="./img/05.jpg">
+              </a>
             </li>
             <li class="image inline">
-              <a><img src="./img/06.jpg"></a>
+              <a class="inline">
+                <img src="./img/06.jpg">
+              </a>
             </li>
           </ul>
           <div class="subbox center">
@@ -103,16 +115,24 @@
       <nav class="nav center">
         <ul class="nav_botton inne">
           <li class="sns inline"> 
-            <a class="icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="index.html" class="icon inline">
+              <i class="fab fa-facebook-f"></i>
+            </a>
           </li>
           <li class="sns inline">
-            <a class="icon"><i class="fab fa-dribbble"></i></a>
+            <a href="index.html" class="icon inline">
+              <i class="fab fa-dribbble"></i>
+            </a>
           </li>
           <li class="sns inline">
-            <a class="icon"><i class="fab fa-twitter"></i></a>
+            <a href="index.html" class="icon inline">
+              <i class="fab fa-twitter"></i>
+            </a>
           </li>
           <li class="sns inline">
-            <a class="icon"><i class="fas fa-envelope"></i></a>
+            <a href="index.html" class="icon inline">
+              <i class="fas fa-envelope"></i>
+            </a>
           </li>
         </ul>
       </nav>
