ブレイクポイント レビュー１

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
   </head>
   <body class="body">
     <header class="header">
-      <div class="inner">
+      <div class="inner position">
         <i class="fas fa-bolt"></i>
         <a class="botton inline">Contact</a>
+        <span class="span">
+          <i></i>
+          <i></i>
+          <i></i>
+        </span>
       </div>
     </header>
     <main class="main">
@@ -115,22 +120,22 @@
       <nav class="nav center">
         <ul class="nav_botton inne">
           <li class="sns inline"> 
-            <a href="index.html" class="icon inline">
+            <a href="#" class="icon inline">
               <i class="fab fa-facebook-f"></i>
             </a>
           </li>
           <li class="sns inline">
-            <a href="index.html" class="icon inline">
+            <a href="#" class="icon inline">
               <i class="fab fa-dribbble"></i>
             </a>
           </li>
           <li class="sns inline">
-            <a href="index.html" class="icon inline">
+            <a href="#" class="icon inline">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li class="sns inline">
-            <a href="index.html" class="icon inline">
+            <a href="#" class="icon inline">
               <i class="fas fa-envelope"></i>
             </a>
           </li>
