boltレスポンシブレビュー３

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <header class="header">
       <div class="inner position">
         <i class="fas fa-bolt"></i>
-        <a class="botton inline">Contact</a>
-        <span class="span">
+        <a class="botton inline">Contact
           <i></i>
           <i></i>
           <i></i>
-        </span>
+        </a>
       </div>
     </header>
     <main class="main">
