--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <header class="header">
       <div class="inner position">
         <i class="fas fa-bolt"></i>
-        <a class="botton inline">Contact
+        <a href="#" class="botton inline">Contact</a>
+        <span class="span">
           <i></i>
           <i></i>
           <i></i>
-        </a>
+        </span>
       </div>
     </header>
     <main class="main">
@@ -45,32 +46,32 @@
           <h2 class="article_text raleway">OUR LATEST WORK</h2>
           <ul class="imgbox">
             <li class="image inline">
-              <a class="inline">
+              <a href="#" class="inline">
                 <img src="./img/01.jpg">
               </a>
             </li>
             <li class="image inline">
-              <a class="inline">
+              <a href="#" class="inline">
                 <img src="./img/02.jpg">
               </a>
             </li>
             <li class="image inline">
-              <a class="inline">
+              <a href="#" class="inline">
                 <img src="./img/03.jpg">
               </a>
             </li>
             <li class="image inline">
-              <a class="inline">
+              <a href="#" class="inline">
                 <img src="./img/04.jpg">
               </a>
             </li>
             <li class="image inline">
-              <a class="inline">
+              <a href="#" class="inline">
                 <img src="./img/05.jpg">
               </a>
             </li>
             <li class="image inline">
-              <a class="inline">
+              <a href="#" class="inline">
                 <img src="./img/06.jpg">
               </a>
             </li>
@@ -80,7 +81,7 @@
               <p class="subtext inline subfont">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
             </div>
             <div class="buttonbox inline">
-              <a class="article_button inline">Email Me!</a>
+              <a href="#" class="article_button inline">Email Me!</a>
             </div>
           </div>
         </div>
